filebrowser/app/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser-service
spec:
  selector:
    app: filebrowser
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
  type: ClusterIP
